unifi/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: unifi
spec:
  redirectScheme:
    permanent: true
    scheme: https
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: unifi
  namespace: unifi
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`unifi.lab.example`)
      middlewares:
        - name: redirect-to-https
      services:
        - name: unifi
          port: 8443
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: unifi-secure
  namespace: unifi
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`unifi.lab.example`)
      services:
        - name: unifi
          port: 8443
          scheme: https
          serversTransport: unifi-insecure
  tls: {}
